[gd_scene load_steps=2 format=3 uid="uid://s5pobunw80jf"]

[ext_resource type="Script" uid="uid://bglgdtn5m6fjh" path="res://entry_menu.gd" id="1_2pw6w"]

[node name="EntryMenu" type="Node"]
script = ExtResource("1_2pw6w")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ConnectionMenu" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -267.5
offset_top = -115.0
offset_right = 267.5
offset_bottom = 115.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/ConnectionMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ConnectionMenu/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="CanvasLayer/ConnectionMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Connection Menu"
horizontal_alignment = 1

[node name="HostButton" type="Button" parent="CanvasLayer/ConnectionMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="JoinButton" type="Button" parent="CanvasLayer/ConnectionMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join
"

[node name="IpEntry" type="LineEdit" parent="CanvasLayer/ConnectionMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter the IP address of the signaling server here"
alignment = 1

[node name="PortEntry" type="LineEdit" parent="CanvasLayer/ConnectionMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter the room code here"
alignment = 1

[connection signal="pressed" from="CanvasLayer/ConnectionMenu/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ConnectionMenu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="text_changed" from="CanvasLayer/ConnectionMenu/MarginContainer/VBoxContainer/IpEntry" to="." method="_on_ip_entry_text_changed"]
[connection signal="text_submitted" from="CanvasLayer/ConnectionMenu/MarginContainer/VBoxContainer/IpEntry" to="." method="_on_ip_entry_text_submitted"]
[connection signal="text_changed" from="CanvasLayer/ConnectionMenu/MarginContainer/VBoxContainer/PortEntry" to="." method="_on_port_entry_text_changed"]
[connection signal="text_submitted" from="CanvasLayer/ConnectionMenu/MarginContainer/VBoxContainer/PortEntry" to="." method="_on_port_entry_text_submitted"]
